Admin Dashboard Init (HTML only)

--- a/frontend/MRS/LOGIN.html
+++ b/frontend/MRS/LOGIN.html
@@ -17,21 +17,21 @@
                 </span>
             </div>
             <h2 class="sign-in-title">Sign In</h2>
-            <form id="sign-in-form">
+            <form action="/login" method="POST">
                 <div class="input-group">
                     <label class="input-label">E-mail</label>
-                    <input class="input-field" type="email" id="email" placeholder="example@gmail.com" required>
+                    <input class="input-field" type="email" name="email" id="email" placeholder="example@gmail.com" required>
                 </div>
                 <div class="input-group">
                     <label class="input-label">Password</label>
                     <div class="password-container">
-                        <input class="input-field" id="password" type="password" placeholder="••••••••" required>
-                        <i class="fas fa-eye toggle-password" onclick="togglePassword()"></i> <!-- Eye icon -->
+                        <input class="input-field" name="password" id="password" type="password" placeholder="••••••••" required>
+                        <i class="fas fa-eye toggle-password" onclick="togglePassword()"></i>
                     </div>                    
                 </div>
-                <br></br>
+                <br>
                 <button type="submit" class="sign-up-button">Sign In</button>
-            </form>            
+            </form>                        
             <div class="or-text">
                 <span>or</span>
                 <br></br>
@@ -56,36 +56,6 @@
 
     <!-- Add JavaScript to handle form submission -->
     <script>
-        // Function to handle form submission
-        document.getElementById('sign-in-form').addEventListener('submit', async (e) => {
-            e.preventDefault();  // Prevent the default form submission
-
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            // Send the login request to the backend
-            const response = await fetch('http://localhost:5000/api/auth/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ email, password }),
-            });
-
-            const result = await response.json();
-            
-            if (response.ok) {
-                // If login is successful, you can store the token and redirect to another page
-                localStorage.setItem('token', result.token);  // Store JWT token in localStorage
-                alert('Login successful');
-                // Redirect to the user dashboard or another page
-                window.location.href = '/dashboard';  // Change this to the actual dashboard page URL
-            } else {
-                // Handle login failure
-                alert('Login failed: ' + result.message);
-            }
-        });
-
         // Function to toggle password visibility (optional)
         function togglePassword() {
             const passwordField = document.getElementById('password');
@@ -99,5 +69,6 @@
             }
         }
     </script>
-</body>
-</html>
+    </body>
+    </html>
+    
